Updating CircleCI to use LTS JDKs